--- a/src/gardener.iOS/gardener.iOS.csproj
+++ b/src/gardener.iOS/gardener.iOS.csproj
@@ -301,4 +301,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\no_image.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\bizuteria_tc.png" />
+  </ItemGroup>
 </Project>
