--- a/src/gardener.Android/gardener.Android.csproj
+++ b/src/gardener.Android/gardener.Android.csproj
@@ -66,6 +66,9 @@
     <PackageReference Include="Realm">
       <Version>4.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.2.0.223</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Arch.Work.Runtime">
       <Version>1.0.0</Version>
     </PackageReference>
