:sparkles: Добавлен скорлл в формы.

--- a/src/gardener.iOS/gardener.iOS.csproj
+++ b/src/gardener.iOS/gardener.iOS.csproj
@@ -190,7 +190,9 @@
     <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\l_180x180 %281%29.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\l_1024x1024%281%29.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\l_1024x1024%281%29.png">
+      <Visible>false</Visible>
+    </ImageAsset>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
