--- a/src/gardener.iOS/gardener.iOS.csproj
+++ b/src/gardener.iOS/gardener.iOS.csproj
@@ -202,31 +202,27 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Realm">
-      <Version>4.1.0</Version>
+      <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
-      <Version>1.2.0.223</Version>
+      <Version>2.0.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
-      <Version>1.1.0</Version>
+      <Version>1.5.3.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging">
-      <Version>4.1.1.1</Version>
+      <Version>4.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
     <PackageReference Include="Microsoft.EntityFrameworkCore">
-      <Version>3.0.0</Version>
+      <Version>3.1.6</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\gardener.Android\gardener.Android.csproj">
-      <Project>{24CE3C36-16B9-426D-AA0C-5961ECF8D88C}</Project>
-      <Name>gardener.Android</Name>
-    </ProjectReference>
     <ProjectReference Include="..\gardener\gardener.csproj">
       <Project>{44461089-8EBB-44CA-8D8F-2A1B848A9B64}</Project>
       <Name>gardener</Name>
